corrección errata test

--- a/Electromagnetismo/electromagnetismo-test.html
+++ b/Electromagnetismo/electromagnetismo-test.html
@@ -182,7 +182,7 @@
 
             <li><article style="background-color:lightred;border-color:red">
             
-                <strong><p>En la siguiente figura se muestra una carga negativa que se desplaza verticalmente hacia arriba con velocidad <span class="math inline">\(\vec{v}\)</span> y el campo magnético <span class="math inline">\(\vec{B}\)</span>$$ que crea. Señale el esquema correcto:</p></strong>
+                <strong><p>En la siguiente figura se muestra una carga negativa que se desplaza verticalmente hacia arriba con velocidad <span class="math inline">\(\vec{v}\)</span> y el campo magnético <span class="math inline">\(\vec{B}\)</span> que crea. Señale el esquema correcto:</p></strong>
                                 
                 <div class="sbsimage">
                     <div class="imgContainerEnd">
