--- a/Magnitudes/magnitudes_teoría.html
+++ b/Magnitudes/magnitudes_teoría.html
@@ -349,6 +349,7 @@
 
 <a href="magnitudes-1.html">Ejercicios para repasar</a><br><br>
 <a href="magnitudes-2.html">Problemas adicionales</a><br><br>
+<a href="magnitudes-test.html">Test para repasar</a><br><br>
 <a href="https://cursos-0-fc-ugr.github.io/Fisica/">Volver a la página principal de Física</a>
 
 <br><br>
