--- a/Ondas/ondas.html
+++ b/Ondas/ondas.html
@@ -416,6 +416,7 @@ Determine:
 </article>
 
   <a href="ondas-2.html">Ejercicios de ondas</a><br><br>
+  <a href="ondas-test.html">Test para repasar</a><br><br>
   <a href="https://cursos-0-fc-ugr.github.io/Fisica/">Volver a la página principal de Física</a>
 
   <br><br>
