--- a/Oscilaciones/oscilaciones_teoría.html
+++ b/Oscilaciones/oscilaciones_teoría.html
@@ -443,6 +443,7 @@ Newton: <span class="math inline">\(\vec{F}=m\vec{a}\)</span>, por lo que
 
 <a href="oscilaciones-1.html">Ejercicios de vibraciones</a><br><br>
 <a href="oscilaciones-2.html">Ejercicios de Ley de Hooke</a><br><br>
+<a href="oscilaciones-test.html">Test para repasar</a><br><br>
 <a href="https://cursos-0-fc-ugr.github.io/Fisica/">Volver a la página principal de Física</a>
 
 
